fixed spacing issues

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -26,7 +26,7 @@ h2, h4{
 }
 
 h3 {
-	margin: 10px 20px 0 20px;
+	margin-bottom: 20px;
 }
 
 .profile{
@@ -64,10 +64,9 @@ li{
 
 .dropdown-content {
   display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	position: absolute;
+	color: black;
+	background-color: #7cedfa;
   z-index: 1;
 }
 
@@ -93,9 +92,21 @@ li{
 	border-radius: 8px;
 }
 
-.flex-container .skills li {
+.skills .skill-items {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+}
+
+.skills .dropdown {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.testing {
+	margin-top: 15px;
 }
 
 .items {
@@ -104,11 +115,12 @@ li{
 
 .items-double {
 	flex: 2;
+	margin: 20px;
 }
 
 .projectCard {
 	width: 300px;
-	min-height: 750px;
+	min-height: 450px;
   border-radius: 8px;
   border: 2px rgb(104, 104, 104) solid;
   overflow: hidden;
@@ -130,6 +142,7 @@ li{
 .projectLink:hover{
 	color: rgb(69, 69, 250);
 }
+
 
 img {
   border-radius: 5px 5px 0 0;
